@@ -55,7 +55,6 @@ if [ "$1" = "configure" ]; then
     db_get console-setup/ttys
     ttys="$RET"
 
-
     db_get console-setup/modelcode
     model="$RET"
 
