@@ -25,6 +25,8 @@ console-setup (1.29) UNRELEASED; urgency=low
     xorg.conf. Closes: #515685.
   * Store cached keymap in /etc/console-setup/cached.kmap.gz if possible.
     Thanks to Frédéric Boiteux, closes: #509117.
+  * Fix a bug: empty string as keyboard model in the config file when the
+    user selects the default keyboard model.
   
   [ Colin Watson ]
   * Fix property counts in Goha and legacy BDF fonts.
